# ComputerGraphic-Journey

./: .gitmodules  CMakeLists.txt
src/: main.cpp  z_buffer.cpp
src/hello-world/: main.cpp  template.cpp  transform.cpp
src/lights/: basic_scene.cpp
src/shaders/: basic.frag  depth.frag  triangle.frag
src/shaders/lights/: blinn_phong.frag  blinn_phong.vert  global_light.frag
src/shaders/temp/: timecolor.frag  triangle.vert
src/utilities/: utilities.cpp  utilities.h
